fix: fixing spacing issues and refactor carousel

--- a/src/features/Home/Carousel/Carousel.module.scss
+++ b/src/features/Home/Carousel/Carousel.module.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/utility' as *;
 
 .carouselComponent {
-    margin: rem(16) 0 rem(8);
+    margin: rem(16) 0 rem(16);
 
     .carouselContainer {
         display: flex;
